--- a/LSTM (split_v2).ipynb
+++ b/LSTM (split_v2).ipynb
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1223,7 +1223,7 @@
        "34363"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1259,7 +1259,7 @@
        "11"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1350,7 +1350,7 @@
        "(27490, 143)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1369,8 +1369,8 @@
    },
    "outputs": [],
    "source": [
-    "X_train = X_train.reshape(X_train.shape[0], 11, -1).swapaxes(1, 2)\n",
-    "X_test = X_test.reshape(X_test.shape[0], 11, -1).swapaxes(1, 2)"
+    "X_train = X_train.reshape(X_train.shape[0], X_train.shape[1] / 11, -1).swapaxes(1, 2)\n",
+    "X_test = X_test.reshape(X_test.shape[0], X_train.shape[1] / 11, -1).swapaxes(1, 2)"
    ]
   },
   {
@@ -1383,172 +1383,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "minute_t-5\n",
-      "hour_t-5\n",
-      "day_t-5\n",
-      "month_t-5\n",
-      "PCA_1_t-5\n",
-      "Holiday_t-5\n",
-      "Day_t-5\n",
-      "thunder_t-5\n",
-      "tempi_t-5\n",
-      "rain_t-5\n",
-      "pressurei_t-5\n",
-      "hum_t-5\n",
-      "dewpti_t-5\n",
-      "minute_t-4\n",
-      "hour_t-4\n",
-      "day_t-4\n",
-      "month_t-4\n",
-      "PCA_1_t-4\n",
-      "Holiday_t-4\n",
-      "Day_t-4\n",
-      "thunder_t-4\n",
-      "tempi_t-4\n",
-      "rain_t-4\n",
-      "pressurei_t-4\n",
-      "hum_t-4\n",
-      "dewpti_t-4\n",
-      "minute_t-3\n",
-      "hour_t-3\n",
-      "day_t-3\n",
-      "month_t-3\n",
-      "PCA_1_t-3\n",
-      "Holiday_t-3\n",
-      "Day_t-3\n",
-      "thunder_t-3\n",
-      "tempi_t-3\n",
-      "rain_t-3\n",
-      "pressurei_t-3\n",
-      "hum_t-3\n",
-      "dewpti_t-3\n",
-      "minute_t-2\n",
-      "hour_t-2\n",
-      "day_t-2\n",
-      "month_t-2\n",
-      "PCA_1_t-2\n",
-      "Holiday_t-2\n",
-      "Day_t-2\n",
-      "thunder_t-2\n",
-      "tempi_t-2\n",
-      "rain_t-2\n",
-      "pressurei_t-2\n",
-      "hum_t-2\n",
-      "dewpti_t-2\n",
-      "minute_t-1\n",
-      "hour_t-1\n",
-      "day_t-1\n",
-      "month_t-1\n",
-      "PCA_1_t-1\n",
-      "Holiday_t-1\n",
-      "Day_t-1\n",
-      "thunder_t-1\n",
-      "tempi_t-1\n",
-      "rain_t-1\n",
-      "pressurei_t-1\n",
-      "hum_t-1\n",
-      "dewpti_t-1\n",
-      "dewpti\n",
-      "hum\n",
-      "pressurei\n",
-      "rain\n",
-      "tempi\n",
-      "thunder\n",
-      "Day\n",
-      "Holiday\n",
-      "PCA_1\n",
-      "month\n",
-      "day\n",
-      "hour\n",
-      "minute\n",
-      "dewpti_t+1\n",
-      "hum_t+1\n",
-      "pressurei_t+1\n",
-      "rain_t+1\n",
-      "tempi_t+1\n",
-      "thunder_t+1\n",
-      "Day_t+1\n",
-      "Holiday_t+1\n",
-      "PCA_1_t+1\n",
-      "month_t+1\n",
-      "day_t+1\n",
-      "hour_t+1\n",
-      "minute_t+1\n",
-      "dewpti_t+2\n",
-      "hum_t+2\n",
-      "pressurei_t+2\n",
-      "rain_t+2\n",
-      "tempi_t+2\n",
-      "thunder_t+2\n",
-      "Day_t+2\n",
-      "Holiday_t+2\n",
-      "PCA_1_t+2\n",
-      "month_t+2\n",
-      "day_t+2\n",
-      "hour_t+2\n",
-      "minute_t+2\n",
-      "dewpti_t+3\n",
-      "hum_t+3\n",
-      "pressurei_t+3\n",
-      "rain_t+3\n",
-      "tempi_t+3\n",
-      "thunder_t+3\n",
-      "Day_t+3\n",
-      "Holiday_t+3\n",
-      "PCA_1_t+3\n",
-      "month_t+3\n",
-      "day_t+3\n",
-      "hour_t+3\n",
-      "minute_t+3\n",
-      "dewpti_t+4\n",
-      "hum_t+4\n",
-      "pressurei_t+4\n",
-      "rain_t+4\n",
-      "tempi_t+4\n",
-      "thunder_t+4\n",
-      "Day_t+4\n",
-      "Holiday_t+4\n",
-      "PCA_1_t+4\n",
-      "month_t+4\n",
-      "day_t+4\n",
-      "hour_t+4\n",
-      "minute_t+4\n",
-      "dewpti_t+5\n",
-      "hum_t+5\n",
-      "pressurei_t+5\n",
-      "rain_t+5\n",
-      "tempi_t+5\n",
-      "thunder_t+5\n",
-      "Day_t+5\n",
-      "Holiday_t+5\n",
-      "PCA_1_t+5\n",
-      "month_t+5\n",
-      "day_t+5\n",
-      "hour_t+5\n",
-      "minute_t+5\n",
-      "VAR\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for c in train_df.columns:\n",
-    "    print c"
+    "#for c in train_df.columns:\n",
+    "#    print c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1561,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1571,10 +1420,10 @@
     {
      "data": {
       "text/plain": [
-       "(27490, 13, 11)"
+       "(27490, 11, 13)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
